...
                    app:endIconMode="none"
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginTop="20dp"
                    android:hint="@string/executor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_text_input_layout">

                    <AutoCompleteTextView
                        android:id="@+id/executor_drop_menu_auto_complete_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintEnd_toStartOf="@+id/time_in_plan_text_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/executor_drop_menu_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_in_plan_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_in_plan_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/executor_drop_menu_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_in_plan_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconMode="none"
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_in_plan_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- блок выбора видимости скрыт до реализации данного функционала -->
...
                    android:id="@+id/visibility"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/save_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_text_input_layout">

                    <TextView
                        android:layout_width="match_parent"
...
                    android:contentDescription="@string/save"
                    android:text="@string/save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visibility" />

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cancel"
                    android:text="@string/cancel"
...
