...
                android:layout_marginTop="@dimen/card_view_padding"
                android:text="@string/topic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_material_text_view"
                style="@style/WishPatientAndExecutorTextSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_padding"
                android:layout_marginEnd="@dimen/card_view_padding"
                android:ellipsize="end"
...
            android:text="@string/wish_executor_label"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/claim_top_divider_image_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/executor_name_material_text_view"
            style="@style/SmallBlackTextStyle"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewEnd"
...
