...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="empty_claim_list_image_view, empty_claim_list_text_view, claim_retry_material_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/claim_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_claim" />
        </androidx.constraintlayout.widget.ConstraintLayout>
...
